# aiidalab-empa-surfaces

./: .gitignore  .pre-commit-config.yaml  Coffee.ipynb  README.md  Untitled.ipynb  a_new_search.ipynb  comments.ipynb  construct_cell.ipynb  cp2k_qe_vibr_comparison.ipynb  edit_structure.ipynb  export_structure.ipynb  handle_cubes.ipynb  helpers.py  manage_calcs.ipynb  metadata.json  old_search.ipynb  pyproject.toml  rescale_structure.ipynb  search.ipynb  search_neb.ipynb  search_replicas.ipynb  setup.cfg  setup.json  setup.py  setup_codes.ipynb  setup_custom_code.ipynb  start.md  start.py  structure_browser.py  submit_adsorption_energy.ipynb  submit_benchmark.ipynb  submit_calculations.ipynb  submit_casscf.ipynb  submit_geometry_optimization.ipynb  submit_gw-ic.ipynb  submit_gw.ipynb  submit_gw_ic.ipynb  submit_neb.ipynb  submit_nics.ipynb  submit_pdos.ipynb  (+30 more)
.github/workflows/: release.yml
Files/: BASIS_MOLOPT  GW_BASIS_SET  RI_HFX_BASIS_all
bulks/: README.md  bulkoptwork.py  celloptwork.py  export_structure.ipynb  search.ipynb  start.py  submit_bulkopt.ipynb  submit_cellopt.ipynb  upload_many_structures.ipynb
gw/: postprocess.py  postprocess_gw.py  postprocess_gw_ic.py  submit_gw-ic.ipynb  submit_gw.ipynb  view_gw-ic.ipynb  view_gw.ipynb
molecules/: geooptwork.py  gw_workchain.py  gwwork.py  search.ipynb  start.py  submit_geoopt.ipynb  submit_gw.ipynb
nanoribbon/: aux_script_strings.py  compare.ipynb  nanoribbonwork.py  search.ipynb  show.ipynb  show_pdos.ipynb  submit.ipynb
nanoribbon/aux_scripts/: cube_clip-cropper.py  cube_cutter.py
reactions/: NEB.ipynb  README.md  SearchNEB.ipynb  SearchReplica.ipynb  analyze_structure.py  collective_variable_widget.py  collective_variables.py  cp2k_neb_parser.py  dft_details_dev.py  find_mol.py  get_cp2k_input.py  metadata.py  neb_details.py  neb_utils.py  nebwork.py  replicas.ipynb  replicawork.py  search_neb.ipynb  search_replica_widget.py  search_replicas.ipynb  slab_validity.py  start.py  submit_neb.ipynb  submit_replicas.ipynb  suggested_param.py  viewer_details.py
reactions/parsers/: __init__.py  cp2k_neb_parser.py
reactions/workchains/: __init__.py  find_mol.py  nebwork.py  replicawork.py
scanning_probe/: .gitignore  README.md  common.py  igor.py  series_plotter.py
scanning_probe/afm/: run_afm.sh
scanning_probe/hrstm/: atomtypes_2pp.ini  run_afm.sh
scanning_probe/orb/misc/: run_cube_from_wfn.sh
scanning_probe/pdos/: pdos_postprocess.py
scanning_probe/plugins/: afm.py  hrstm.py  overlap.py  stm.py
scripts/: check_notebook_source_format.py
slab/: boh.ipynb  build.ipynb  build_slab.ipynb  dftwork.py  search.ipynb  search_old.ipynb  slabwork.py  submit_adsorption.ipynb  submit_geopt.ipynb  submit_test.ipynb
surfaces_tools/utils/: __init__.py  atom_indices.py  collective_variables.py  cp2k_input_validity.py  files.py  igor.py  pdos_postprocess.py  postprocess_gw.py  postprocess_gw_ic.py  spm.py  wfn.py
surfaces_tools/widgets/: afm.py  analyze_structure.py  auto_representations.py  build_slab.py  cdxml.py  comments.py  computational_resources.py  constraints.py  create_xyz_input_files.py  cube.py  dft_settings.py  editors.py  empa_viewer.py  fragments.py  inputs.py  ligands.py  lowdimfinder.py  obsolete.py  pdos.py  search_completed_widget.py  search_replica_widget.py  search_structures_widget.py  series_plotter.py  slabs.py  spins.py  stack.py  utils.py
tests/: test_analyze_structure.py  test_auto_representations.py  test_constraints.py  test_files.py  test_lowdimfinder_contract.py
utils/: collective_variables.py  pdos_postprocess.py  postprocess_gw.py  postprocess_gw_ic.py  spm.py
widgets/: ANALYZE_structure.py  Ligands.py  analyze_structure.py  build_slab.py  cdxml.py  collective_variable_widget.py  collective_variables.py  comments.py  computational_resources.py  computer_code_selection.py  constraints.py  cp2k2dict.py  cp2k_input_validity.py  create_xyz_input_files.py  dft_details.py  dft_details_dev.py  dft_details_old.py  empa_viewer.py  find_mol.py  fragments.py  get_cp2k_input.py  get_cp2k_input_dev.py  get_cp2k_input_old.py  import_cdxml.py  inputs.py  metadata.py  modify_structure.ipynb  neb_details.py  neb_utils.py  new_search_completed_widget.py  number_of_nodes.py  obsolete.py  search_completed.py  search_completed_widget.py  search_old_completed_widget.py  search_replica_widget.py  search_structures_widget.py  series_plotter.py  slab_validity.py  slabs.py  (+8 more)
