[metadata]
name = surfaces
version = 1.0.0b18
description = Tools for on-surface chemistry, developed at the nanotech@surfaces laboratory, Empa.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nanotech-empa/aiidalab-empa-surfaces
author = nanotech@surfaces laboratory, Empa
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Logo = https://raw.githubusercontent.com/nanotech-empa/aiidalab-empa-surfaces/master/miscellaneous/logos/empa.png
    Documentation = https://github.com/nanotech-empa/aiidalab-empa-surfaces/#readme
    Bug Tracker = https://github.com/nanotech-empa/aiidalab-empa-surfaces/issues

[options]
packages = find:
install_requires =
    aiida-core~=2.2
    aiida-cp2k>=2.1.0b1
    aiida-nanotech-empa>=v1.0.0b7
    aiidalab-widgets-base[smiles]~=2.1
    ase~=3.21
    rdkit>=2023.03.1
python_requires = >=3.8

[options.extras_require]
dev =
    bumpver==2022.1119
    pre-commit~=2.20

[aiidalab]
title = Empa nanotech@surfaces Laboratory - On-Surface Chemistry

[flake8]
ignore =
    E501
    W503
    E203
per-file-ignores =
    tests/*: U100, U101

[bumpver]
current_version = "v1.0.0b18"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}
