[metadata]
name = surfaces
version = 1.1.0
description = Tools for on-surface chemistry, developed at the nanotech@surfaces laboratory, Empa.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nanotech-empa/aiidalab-empa-surfaces
author = nanotech@surfaces laboratory, Empa
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Logo = https://raw.githubusercontent.com/nanotech-empa/aiidalab-empa-surfaces/master/miscellaneous/logos/empa.png
    Documentation = https://github.com/nanotech-empa/aiidalab-empa-surfaces/#readme
    Bug Tracker = https://github.com/nanotech-empa/aiidalab-empa-surfaces/issues

[options]
packages = find:
install_requires =
    aiida-core>=2.8,<3
    aiida-nanotech-empa>=v1.0.0
    aiidalab-widgets-base[smiles]>=3.0.0a0,<4
    aiidalab-widgets-empa>=0.2.2
    ase>=3.24
    cubehandler>=0.2.1
python_requires = >=3.9

[options.extras_require]
dev =
    bumpver==2022.1119
    mypy
    pre-commit~=4.3

[aiidalab]
title = Empa nanotech@surfaces Laboratory - On-Surface Chemistry

[flake8]
ignore =
    E501
    W503
    E203
per-file-ignores =
    surfaces_tools/widgets/lowdimfinder.py: C414, E266, N802, N806, N816, N818, TRY003, TRY200
    tests/*: U100, U101

[bumpver]
current_version = "v1.1.0"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}
